# Magic_Fight_Client

./: .travis.yml  CMakeLists.txt  README.md
include/: NetClient.hpp  NetCommon.hpp  NetConnection.hpp  NetModule.hpp  NetThreadSafeQueue.hpp
main/: main.cpp
sources/: NetModule.cpp  source.cpp
tests/: test.cpp
xtea3_lib/: xtea3.cpp
